--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -7,9 +7,11 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href={{asset("css/header.css")}}>
 
-	<a href="{{path('app_home_page')}}">
-		<button type="button" class="btn btn-dark">Voltar a loja</button>
-	</a>
+	<div class="d-inline-flex p-3">
+		<a href="{{path('app_home_page')}}">
+			<button type="button" class="btn btn-dark">Voltar a loja</button>
+		</a>
+	</div>
 	<div
 		class="container mt-5">
 		<h1 class="text-center mb-4">Fale Conosco</h1>
