--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -13,9 +13,16 @@
 	<body>
 		<!--Barre de Navegation-->
 		<nav>
+			{# <button class="hamburger" onclick="toggleMenu()">
+				<i class="fas fa-bars"></i>
+			</button> #}
+
 			<a class="navbar-brand" href="{{path('app_home_page')}}"><img class="logo" src="{{asset("image/FalkonANK/logo-transparent-png.png")}}"></a>
 			{# <h1>Alimentason e Qualidade!</h1> #}
-			<div class="onglets">
+			<button class="hamburger" onclick="toggleMenu()">
+				<i class="fas fa-bars"></i>
+			</button>
+			<div class="onglets" id="navMenu">
 				<a href="{{path('app_home_page')}}">
 					<i class="fas fa-home"></i>
 				</a>
@@ -83,10 +90,12 @@
 				{% endif %}
 
 				{# <a class="insta" href="">
-					<i class="fab fa-instagram"></i>
-				</a> #}
-				<a class="link .facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info"><i class="fab fa-facebook-f"></i></a>
-        
+													<i class="fab fa-instagram"></i>
+												</a> #}
+				<a class="link .facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info">
+					<i class="fab fa-facebook-f"></i>
+				</a>
+
 
 				<div class="busca">
 					<form class="d-flex" role="search" method="get" action="{{ path('product_search') }}">
@@ -109,6 +118,12 @@
 
 			</div>
 		</nav>
+		<script>
+			function toggleMenu() {
+const navMenu = document.getElementById('navMenu');
+navMenu.classList.toggle('active');
+}
+		</script>
 		<!--Fim de barre de Navegation-->
 
 	</body>
