--- a/public/css/header.css
+++ b/public/css/header.css
@@ -63,15 +63,15 @@ nav {
 	}
 
 	#navMenu {
-		display: none; /* cache le menu mobile par défaut */
-		flex-direction: flex;
+		display: none;
+		flex-direction: column; /* ✅ CORRIGÉ ICI */
 		width: 100%;
 		background-color: #ffffff00;
 		padding: 10px;
 	}
 
 	#navMenu.active {
-		display: flex; /* s'affiche quand on clique */
+		display: flex;
 	}
 
 	nav {
@@ -79,6 +79,7 @@ nav {
 		align-items: flex-start;
 	}
 }
+
 
 /*Fim barre de navegation*/
 
