--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,7 +6,6 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 /* --------------------- Général --------------------- */
 body {
   font-family: 'Roboto', sans-serif;
@@ -15,7 +14,7 @@ body {
 }
 
 h1 {
-  color: grredeen;
+  color: green;
   text-align: center;
 }
 
