--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -19,7 +19,7 @@
 				<i class="fas fa-bars"></i>
 			</button>
 
-			<div class="onglets" id="navMenu">
+			<div id="navMenu" class="onglets">
 				<a href="{{path('app_home_page')}}">
 					<i class="fas fa-home"></i>
 				</a>
@@ -87,8 +87,8 @@
 				{% endif %}
 
 				{# <a class="insta" href="">
-																	<i class="fab fa-instagram"></i>
-																</a> #}
+																					<i class="fab fa-instagram"></i>
+																				</a> #}
 				<a class="link .facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info">
 					<i class="fab fa-facebook-f"></i>
 				</a>
@@ -117,16 +117,15 @@
 		</nav>
 		<!--Fim de barre de Navegation-->
 
-	<script>
-		document.addEventListener("DOMContentLoaded", function () {
-			const menuButton = document.querySelector('.hamburger');
-			const navMenu = document.getElementById('navMenu');
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				const menuButton = document.querySelector('.hamburger');
+				const navMenu = document.getElementById('navMenu');
 
-			menuButton.addEventListener('click', function () {
-				navMenu.classList.toggle('active');
+				menuButton.addEventListener('click', function () {
+					navMenu.classList.toggle('active');
+				});
 			});
-		});
-	</script>
-</body>
+		</script>
+	</body>
 </html>
-
