--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -58,9 +58,11 @@
 						<i class="fab fa-facebook-f"></i>
 					</a>
 					{# <a href="#" class="btn btn-outline-info btn-sm me-2"><i class="fab fa-twitter"></i></a> #}
-					<a href="#" class="btn btn-outline-danger btn-sm me-2">
+					
+					{# <a href="#" class="btn btn-outline-danger btn-sm me-2">
 						<i class="fab fa-instagram"></i>
-					</a>
+					</a> #}
+					
 					{# <a href="#" class="btn btn-outline-primary btn-sm"><i class="fab fa-linkedin"></i></a> #}
 				</div>
 			</div>
