--- a/templates/home_page/about.html.twig
+++ b/templates/home_page/about.html.twig
@@ -26,7 +26,7 @@
 					</p>
 				</div>
 				<div class="col-md-6">
-					<img src="{{ asset('image/backg/sobre-nos.png') }}" alt="Imagem Sobre Nós" class="img-fluid">
+					<img src="{{ asset('image/backg/sobre.png') }}" alt="Imagem Sobre Nós" class="img-fluid">
 				</div>
 			</div>
 		</section>
