--- a/templates/layout/city_menu.html.twig
+++ b/templates/layout/city_menu.html.twig
@@ -1,3 +1,6 @@
+{# css #}
+{# <link rel="stylesheet" href="{{ asset('css/header.css') }}"> #}
+
 <!-- Barre de navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div
