order ref et date

--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -76,7 +76,7 @@
 					<thead>
 						<tr>
 							<th>Referência</th>
-							<th>Data</th>
+							<th>Data (hora de CV)</th>
 							<th>Total</th>
 							<th>Status</th>
 							<th>Beneficiario</th>
