--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -85,7 +85,7 @@
 				{# <a class="insta" href="">
 																													<i class="fab fa-instagram"></i>
 																												</a> #}
-				<a href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info" target="_blank" class="social-icon">
+				<a href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info" target="_blank" >
 					<i class="fab fa-facebook-f"></i>
 				</a>
 				<div class="busca">
