--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -83,7 +83,7 @@
 					{% for order in orders %}
 						<tr onclick="window.location.href='{{ path('app_order_show', {'id': order.id}) }}';" style="cursor: pointer;">
 							<td data-label="Numero">{{ order.ref }}</td>
-							<td data-label="Data">{{ order.orderDate ? order.orderDate|date('Y-m-d H:i:s') : '' }}</td>
+							<td data-label="Data">{{ order.orderDate ? order.orderDate|date('d-m-Y H:i:s') : '' }}</td>
 							<td data-label="Total">{{ order.amountFinal / 100 }}
 								escudos</td>
 							<td data-label="Status">{{ order.orderStatus }}</td>
