--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -66,7 +66,7 @@
 				<tbody>
 					<tr>
 						<th>Data</th>
-						<td>{{ order.orderDate ? order.orderDate|date('Y-m-d H:i:s') : '' }}</td>
+						<td>{{ order.orderDate ? order.orderDate|date('d-m-Y H:i:s') : '' }}</td>
 					</tr>
 					<tr>
 						<th>Total</th>
