--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -46,7 +46,7 @@
 				<!-- Copyright -->
 				<div class="text-center">
 					<img src="{{ asset('image/FalkonANK/logo-png.png') }}" alt="Logo FalkonANK" class="footer-logo">
-					<p>© 2025 FalkonANK Alimentason</p>
+					<p>© 2025 Falkon-ANK</p>
 				</div>
 			</div>
 		</footer>
