--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -70,7 +70,7 @@
 					</tr>
 					<tr>
 						<th>Total</th>
-						<td>{{ order.totalAmount }}
+						<td>{{ order.amountFinal }}
 							CVE - Escudos de Cabo Verde</td>
 					</tr>
 					<tr>
