--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -76,7 +76,7 @@
 					<tr>
 						<th>Stado de Encomenda :
 						</th>
-						<td>{{ order.orderStatus }}</td>
+						<td>{{ order.orderStatus / 100 }}</td>
 					</tr>
 					<tr>
 						<th>Seu codigo secreto :
