--- a/templates/order/show.html.twig
+++ b/templates/order/show.html.twig
@@ -70,13 +70,13 @@
 					</tr>
 					<tr>
 						<th>Total</th>
-						<td>{{ order.amountFinal }}
+						<td>{{ order.amountFinal / 100 }}
 							CVE - Escudos de Cabo Verde</td>
 					</tr>
 					<tr>
 						<th>Stado de Encomenda :
 						</th>
-						<td>{{ order.orderStatus / 100 }}</td>
+						<td>{{ order.orderStatus }}</td>
 					</tr>
 					<tr>
 						<th>Seu codigo secreto :
