demention logo email et loadinding

--- a/templates/stripe/loading.html.twig
+++ b/templates/stripe/loading.html.twig
@@ -90,7 +90,7 @@
         <a href="https://www.exemplo.com/promocoes" target="_blank">
             <img src="https://via.placeholder.com/600x100/3498db/ffffff?text=Promoções+Especiais" alt="Promoções especiais">
         </a> #}
-        
+        <p>FalkonANK agradece a sua confiança!</p>
 
         <p>Confira os nossos livros na amazon : </p>
         <a href="https://www.amazon.fr/stores/To-Imuhotepu/author/B0DQPK6XMM?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">
