--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,6 +35,7 @@
 					<span id="togglePassword" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer;">
 						👁️
 					</span>
+				<p style="color:red;"><a href="{{ path('app_forgot_password_request') }}">Esqueceu a sua senha ?</a></p>
 				</div>
 
 				<input
