--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,23 +1,27 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-.logo{
-    width: 150px;
-    /* height: 150px; */
-}
-a{
-    text-decoration: none;
-    color: black;
-    margin-left: 30px;
-}
-li {
-    list-style-type: none; /* Retire le point ou le numéro des éléments de liste */
-    padding-left: 0; /* Retire le retrait par défaut pour aligner les éléments de liste */
+
+.logo {
+	width: 150px;
+	/* height: 150px; */
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-    margin: 0px;
-    padding: 0px;
+a {
+	text-decoration: none;
+	color: black;
+	margin-left: 30px;
+}
+
+li {
+	list-style-type: none;
+	/* Retire le point ou le numéro des éléments de liste */
+	padding-left: 0;
+	/* Retire le retrait par défaut pour aligner les éléments de liste */
+}
+
+body {
+	font-family: 'Roboto', sans-serif;
+	margin: 0px;
+	padding: 0px;
 }
 
 
@@ -54,6 +58,12 @@ nav {
 	align-items: center;
 	gap: 15px;
 }
+/* .liste-shops li a:hover {
+		background-color: red;
+		color: white;
+		border-radius: 5px;
+		padding: 2px 6px;
+	} */
 
 /* Responsive - écran <= 768px */
 @media screen and (max-width: 768px) {
@@ -62,7 +72,8 @@ nav {
 	}
 
 	#navMenu {
-		display: none; /* cache le menu mobile par défaut */
+		display: none;
+		/* cache le menu mobile par défaut */
 		flex-direction: column;
 		width: 100%;
 		background-color: #ffffff00;
@@ -70,12 +81,44 @@ nav {
 	}
 
 	#navMenu.active {
-		display: flex; /* s'affiche quand on clique */
+		display: flex;
+		/* s'affiche quand on clique */
 	}
 
 	nav {
 		flex-direction: column;
 		align-items: flex-start;
+	}
+
+	/* ------------------------------------------ */
+	.menu-villes-shops {
+		width: 100%;
+		margin-top: 10px;
+	}
+
+	.ville {
+		margin-bottom: 10px;
+	}
+
+	.ville-nom {
+		font-weight: bold;
+		display: block;
+		margin-bottom: 5px;
+		color: black;
+	}
+
+	.liste-shops {
+		list-style: none;
+		padding-left: 15px;
+	}
+
+	.liste-shops li a {
+		color: black;
+		text-decoration: none;
+	}
+
+	.liste-shops li a:hover {
+		text-decoration: underline;
 	}
 }
 
@@ -85,54 +128,62 @@ nav {
 /*Fim header*/
 
 /* section main*/
-.cards{
-    display: grid;
-    border-radius: 10px;
-    text-align: center;
-    grid-template-columns: repeat(3, 1fr);       
-    gap: 5px;
+.cards {
+	display: grid;
+	border-radius: 10px;
+	text-align: center;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 5px;
 }
-.cards img{
-    width: 15vw;
-    height: 20vw;
+
+.cards img {
+	width: 15vw;
+	height: 20vw;
 }
+
 /*Fim de setion main*/
 
 /*div Vidio*/
-.vidio{
-    align-items: center;
-    background-color: #f10606;
+.vidio {
+	align-items: center;
+	background-color: #f10606;
 }
+
 /*Fim d div Vidio*/
 
 /*footeur Pied de page */
-footer{
-    display: flex;
-    justify-content: space-between;
-    background-color: #f10606;
-    padding: 20px;
-}
-footer p{
-    margin-left: 20px;
-}
-.social-media{
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 20%;    
-}
-.social-media i{
-    margin-right: 10px;
+footer {
+	display: flex;
+	justify-content: space-between;
+	background-color: #f10606;
+	padding: 20px;
 }
 
-.shoping_header i{
-    background-color: white;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 17px;
+footer p {
+	margin-left: 20px;
 }
-label{
-    color: green;
+
+.social-media {
+	display: flex;
+	justify-content: space-between;
+	margin: 0px 20%;
 }
-a{
-    text-decoration: none;
+
+.social-media i {
+	margin-right: 10px;
+}
+
+.shoping_header i {
+	background-color: white;
+	padding: 10px;
+	border-radius: 20px;
+	font-size: 17px;
+}
+
+label {
+	color: green;
+}
+
+a {
+	text-decoration: none;
 }
