--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -25,6 +25,7 @@
 				</a>
 				<a href="{{path('app_about_page')}}">Sobre Nos</a>
 				<a href="{{path('contact_nous')}}">Contacto</a>
+				<a href="{{path('app_cadre_photo')}}">Quadro de photos</a>
 
 				{% if app.user %}
 					<li style="position: relative;">
