--- a/templates/merchant/contrato_parceria.html.twig
+++ b/templates/merchant/contrato_parceria.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %} #}
 
 {% block title %}Exemplo de Contrato de Parceria Comercial
 {% endblock %}
@@ -7,9 +7,9 @@
 	<div class="container mt-5 mb-5">
 		<h1 class="mb-4">📄 Exemplo de Contrato de Parceria Comercial</h1>
 
-		<div style="text-align: center; margin-bottom: 20px;">
+		{# <div style="text-align: center; margin-bottom: 20px;">
 			<img class="logo" src="{{asset("image/FalkonANK/logo-transparent-png.png")}}">
-		</div>
+		</div> #}
 
 		<p>
 			<strong>Número do Contrato:</strong>
