Ajout du contrôleur et du template cadre photo

--- a/templates/cadre_photo/index.html.twig
+++ b/templates/cadre_photo/index.html.twig
@@ -94,7 +94,7 @@
 		<div class="quadro">
 			<img src="https://falkon.click/image/quadro/suportPlafond0.jpg" alt="Quadro Pi 8G">
 			<h3>Quadro Moderno 4K Pi 8G</h3>
-			<p>- fixação parede</p>
+			<p>- fixação parede/plafond</p>
 			<p>Systema (8 GB), 4K</p>
 			<p>Cabo HDMI 2 m + fonte 5 V/5 A</p>
 			<p>Caixa + dissipador</p>
@@ -105,7 +105,7 @@
 		<div class="quadro">
 			<img src="https://falkon.click/image/quadro/suportParede.jpg" alt="Quadro Pi 4G">
 			<h3>Quadro Rústico Pi 4G</h3>
-			<p>- fixação parede</p>
+			<p>- fixação parede/plafond</p>
 			<p>Systema (4 GB)</p>
 			<p>Suporte VESA + parafusos</p>
 			<p>Caixa + fonte + cabos</p>
